# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: README.md  pythonci.yml
gendiff/: __init__.py  cli.py  constants.py  diff.py  diff_builder.py  generate_diff.py  parse_file.py
gendiff/formatters/: __init__.py  format_diff.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tools/: argparse.py  diff.py  parse_file.py
tests/: test_comprasion.py  test_generate_diff.py  tests.py
tests/fixtures/: right_answer_json.json
